<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_open"
        android:title="@string/item_open" />
    <item android:title="Save">
        <menu>
            <item
                android:id="@+id/item_save"
                android:title="@string/item_save" />
            <item
                android:id="@+id/item_save_as"
                android:title="@string/item_save_as" />
        </menu>
    </item>
    <item
        android:id="@+id/item_brush_color"
        android:title="@string/item_brush_color" />
    <item
        android:id="@+id/item_brush_weight"
        android:title="@string/item_brush_weight" />
    <item
        android:id="@+id/item_shape"
        android:title="@string/item_shape">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_shape_line"
                    android:checked="true"
                    android:title="@string/item_shape_line" />
                <item
                    android:id="@+id/item_shape_ellipse"
                    android:title="@string/item_shape_ellipse" />
                <item
                    android:id="@+id/item_shape_rectangle"
                    android:title="@string/item_shape_rectangle" />
                <item
                    android:id="@+id/item_shape_free_form"
                    android:title="Free-form" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/item_reset_workspace"
        android:title="@string/item_reset_workspace" />
</menu>